# bevy_config_stack

./: Cargo.toml  README.md
bevy_config_docs/: Cargo.toml
bevy_config_docs/src/: lib.rs
bevy_config_stack/: Cargo.toml
bevy_config_stack/assets/config/: test.ron  vehicle.ron
bevy_config_stack/examples/: basic.rs
bevy_config_stack/src/: lib.rs  load.rs  plugin.rs
